# toy-project

./: .flake8  .gitignore  LICENSE  README.md  build_all.py  pytest.ini
.github/workflows/: deploy.yml
toy_package_a/: pyproject.toml
toy_package_a/toy_package_a/: __init__.py  hello_a.py
toy_package_a/toy_package_a/tests/: test_hello_a.py  test_version.py
toy_package_b/: README.md  pyproject.toml
toy_package_b/toy_package_b/: __init__.py  hello_b.py
toy_package_b/toy_package_b/tests/: test_hello_b.py  test_version.py
