[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "toy_package_a"
dynamic = ["version"]               # ← this enables setuptools-scm
description = "Toy Package A – simple test package"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Sharon Chen", email = "shchen@idmod.org"}]
keywords = ["toy", "example"]

[project.urls]
Repository = "https://github.com/your-username/toy-project"

[tool.setuptools.packages.find]
where = ["."]
include = ["toy_package_a*"]

[tool.setuptools_scm]
root = ".."                           # keep if your monorepo needs it
version_scheme = "no-guess-dev"       # ← change to this (or "guess-next-dev")
local_scheme = "no-local-version"     # ← change to this (critical for PyPI/TestPyPI uploads)
fallback_version = "0.0.0.dev0"